# cmake_template_library

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/myexecutable/: CMakeLists.txt  main.cpp
src/mylibrary/: CMakeLists.txt  mylibrary.h  sayhello.cpp  sayhello.h
tests/: CMakeLists.txt  test_myproject_library.cpp
